--- a/Dashboard/Student/Style/style.css
+++ b/Dashboard/Student/Style/style.css
@@ -1,22 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
-    //font-family: 'Alkatra', cursive;
-    color: black;
+    color: white;
 }
 ::selection{
-    background-color: rgba(0, 213, 241, 0.384);
+    background-color: rgba(0, 235, 137, 0.678);
 }
 .container{
     width: 100vw;
     height: 100vh;
     background-color: black;
+    //overflow: hidden;
 }
 .top{
     height: 10%;
     background-color: rgb(0, 12, 27);
-    
+    overflow: hidden;
 }
 .info{
     width: 30%;
@@ -24,15 +23,14 @@
     //background-color: rgb(99, 168, 185);
     display: inline-flex;
     margin: 10px;
+    overflow:hidden;
 }
 .prof{
     width: 100px;
     //background-color: aqua;
     height: 20%;
     display: inline-block;
-    margin: 10px;
-   // position: relative;
-   
+    margin: 10px;   
 }
 .p1{
     
@@ -42,7 +40,7 @@
     position: relative;
     bottom: 10px;
     left: 10px;
-    border: 1px solid rgb(0, 0, 58);
+    //border: 1px solid rgb(0, 0, 58);
 }
 .p2{
     position: relative;
@@ -83,6 +81,9 @@ img{
     //background-color: rgb(131, 113, 113);
     padding: 20px;
 }
+.bdy a{
+    text-decoration: none;
+}
 .box{
     width: 20%;
     height: 20%;
@@ -93,21 +94,33 @@ img{
     background-color: ;
     box-shadow: 1px 1px 19px 3px #00111c;
     padding: 10px;
-    //animation: ani 5s ease infinite;
+    overflow: hidden;
 }
 
 .box:hover{
     box-shadow: 1px 1px 10px 8px #011d2f;
-    border: 1px solid rgba(135, 207, 235, 0.658);
-    //box-shadow: rgba(0, 225, 255, 0.699) 0px 8px 24px;
-    //box-shadow: rgba(0, 225, 255, 0.699) 0px 7px 29px 0px;
-    
+    border: 1px solid rgba(135, 207, 235, 0.658);   
 }   
 .txt{
-    width: 100px;
-    height: 100px;
-    //background-color: #38b6ff;
-
+    //width: 100px;
+    height: 30%;
+    background-color: #4bb3f083;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon{
+    height: 70%;
+    background-color: #778f9c83;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+svg{
+    width: 50px;
+    height: 50px;
 }
 /*-------------------------------------------*/
 
